# cppong

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  compile_and_run.sh  meson.build
ECS/: .gitignore  CMakeLists.txt  ECS.sln  ECS.vcxproj  ECS.vcxproj.filters  Entity.cpp  Game.cpp  Graphics.cpp  Grid.cpp  LifeSystem.cpp  Mixer.cpp  MovementSystem.cpp  Random.cpp  RenderSystem.cpp  System.cpp  Utilities.cpp  main.cpp  meson.build
ECS/builddir/: .ninja_deps  .ninja_log  build.ninja  compile_commands.json
ECS/builddir/meson-info/: intro-buildoptions.json  intro-buildsystem_files.json  intro-dependencies.json  intro-install_plan.json  intro-installed.json  intro-projectinfo.json  intro-targets.json  meson-info.json
ECS/builddir/meson-logs/: meson-log.txt
ECS/builddir/meson-private/: coredata.dat.prev
ECS/builddir/meson-private/__CMake_compiler_info__/: CMakeLists.txt  CMakeMesonTempToolchainFile.cmake  build.ninja  cmake_trace.txt
ECS/builddir/meson-private/cmake_alsa/: CMakeLists.txt  CMakeMesonToolchainFile.cmake  cmake_trace.txt
ECS/builddir/meson-private/cmake_glesv2/: CMakeLists.txt  CMakeMesonToolchainFile.cmake  cmake_trace.txt
ECS/builddir/subprojects/SDL2-2.0.20/include/: SDL_config.h
ECS/headers/: Components.h  Components.hpp  Entity.hpp  Game.h  Game.hpp  Graphics.h  Graphics.hpp  Grid.h  Mixer.h  Systems.hpp  Utilities.h  Utilities.hpp
ECS/src/: Game.cpp  Utilities.cpp  main.cpp
ECS/src/headers/: Components.h  Game.h  Graphics.h  Mixer.h  Utilities.h
ECS/subprojects/: flecs.wrap  sdl2_mixer.wrap
ECS/update/meson-logs/: meson-log.txt
ECS/update/meson-private/cmake_glesv2/: cmake_trace.txt
_old_src_ref/: emitter.cpp  sprite_resource.cpp  transient.cpp
_old_src_ref/headers/: sprite.hpp  transient.hpp
old_src_ref/: audio.cpp  main.cpp
old_src_ref/headers/: entity.hpp  game.hpp  random.hpp
old_src_ref/old/: testmain.cpp
src/: audio.cpp  ball.cpp  camera.cpp  emitter.cpp  entity.cpp  game.cpp  graphics.cpp  grid.cpp  guy.cpp  main.cpp  meson.build  paddle.cpp  random.cpp  score_zone.cpp  sequencer.cpp  sprite.cpp  sprite_assets.cpp  sprite_resource.cpp  test_entity.cpp  transient.cpp  utils.cpp
src/headers/: audio.hpp  ball.hpp  camera.hpp  emitter.hpp  entity.hpp  game.hpp  graphics.hpp  grid.hpp  guy.hpp  paddle.hpp  score_zone.hpp  sequencer.hpp  sprite.hpp  sprite_assets.hpp  sprite_resource.hpp  test_entity.hpp  transient.hpp  utils.hpp
src/libs/glm/gtx/: intersect.inl
src/old/: main.cpp
